fixed typos in handbook

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -226,6 +226,14 @@
 	year = {2009},
 }
 
+@masterthesis{vonBergen14,
+	title = {A Mobile Application for Boardroom Voting},
+	author = {von Bergen, Philémon},
+	institution = {Bern University of Applied Sciences, Engineering and Information Technology},
+	school = {Bern University of Applied Sciences, Engineering and Information Technology},
+	year = {2014},
+}
+
 @book{book:hac,
 	author = {Menezes, Alfred J. and Vanstone, Scott A. and Oorschot, Paul C. Van},
 	title = {Handbook of Applied Cryptography},
