--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -226,12 +226,14 @@
 	year = {2009},
 }
 
-@masterthesis{vonBergen14,
+@mastersthesis{vonBergen14,
 	title = {A Mobile Application for Boardroom Voting},
 	author = {von Bergen, Philémon},
 	institution = {Bern University of Applied Sciences, Engineering and Information Technology},
 	school = {Bern University of Applied Sciences, Engineering and Information Technology},
 	year = {2014},
+	month = {02},
+	url = {http://e-voting.bfh.ch/students/theses-reports},
 }
 
 @book{book:hac,
