--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -200,7 +200,7 @@
 
 @techreport{ritter13a,
      title = {InstaCircle -- A Location-Bound Ad-Hoc Network for Android Devices},
-     author = {Ritter, Juerg},
+     author = {Ritter, Jürg},
      institution = {Bern University of Applied Sciences, Engineering and Information Technology},
      group = {E-Voting Group},
      year = {2013},
@@ -210,7 +210,7 @@
     
 @techreport{ritter12,
      title = {UniCrypt -- A Cryptographic Library Implemented in Java},
-     author = {Ritter, Juerg},
+     author = {Ritter, Jürg},
      institution = {Bern University of Applied Sciences, Engineering and Information Technology},
      group = {E-Voting Group},
      year = {2012},
